add some bat and config

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional> <!-- 表示依赖不会传递 -->
 		</dependency>
+		<!-- springboot test-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<!-- 核心模块-->
 		<dependency>
 			<groupId>com.mychip</groupId>
