--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -20,6 +20,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!-- SpringBoot 拦截器 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
     <!-- 系统模块-->
     <dependency>
       <groupId>com.mychip</groupId>
