--- a/common/pom.xml
+++ b/common/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>spring-web</artifactId>
     </dependency>
 
+    <!-- spring security 安全认证 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
