--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -122,7 +122,7 @@ spring:
         allow:
         url-pattern: /druid/*
         # 控制台管理用户名和密码
-        login-username: ruoyi
+        login-username: zhouyu
         login-password: 123456
       filter:
         stat:
