--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -27,9 +27,12 @@ server:
     # tomcat的URI编码
     uri-encoding: UTF-8
     # tomcat最大线程数，默认为200
-    max-threads: 800
+    #max-threads: 800
     # Tomcat启动初始化的线程数，默认值25
-    min-spare-threads: 30
+    #min-spare-threads: 30
+    threads:
+      max: 800
+      min-spare: 30
 
 # 日志配置
 logging:
