add API Test for VS code

--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -69,7 +69,7 @@ spring:
     # 数据库索引
     database: 0
     # 密码
-    password:
+    password: 123456
     # 连接超时时间
     timeout: 10s
     lettuce:
@@ -90,7 +90,7 @@ spring:
       master:
         url: jdbc:mysql://localhost:3306/ry-vue?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
         username: root
-        password:
+        password: 123456
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
