--- a/pom.xml
+++ b/pom.xml
@@ -176,23 +176,23 @@
             </dependency>
 
             <!--下面三个适配jdk11兼容性问题-->
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>2.3.1</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
-            <dependency>
-                <groupId>javax.activation</groupId>
-                <artifactId>activation</artifactId>
-                <version>1.1</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
-            <dependency>
-                <groupId>org.glassfish.jaxb</groupId>
-                <artifactId>jaxb-runtime</artifactId>
-                <version>2.3.0-b170127.1453</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>javax.xml.bind</groupId>-->
+<!--                <artifactId>jaxb-api</artifactId>-->
+<!--                <version>2.3.1</version>-->
+<!--            </dependency>-->
+<!--            &lt;!&ndash; https://mvnrepository.com/artifact/javax.activation/activation &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>javax.activation</groupId>-->
+<!--                <artifactId>activation</artifactId>-->
+<!--                <version>1.1</version>-->
+<!--            </dependency>-->
+<!--            &lt;!&ndash; https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.glassfish.jaxb</groupId>-->
+<!--                <artifactId>jaxb-runtime</artifactId>-->
+<!--                <version>2.3.0-b170127.1453</version>-->
+<!--            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
